--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "seed": "npx ts-node config/seed.ts",
     "build:css": "npx @tailwindcss/cli -i ./public/styles/main.css -o ./public/styles/output.css --watch",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev"
+    "prisma:migrate": "prisma migrate dev",
+    "format": "prettier --write \"src/**/*.{ts,js,json,css}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,js,json,css}\""
   },
   "keywords": [],
   "author": "",
@@ -31,6 +33,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.15.5",
     "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
     "prisma": "^6.16.2",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2"
