--- a/package.json
+++ b/package.json
@@ -10,21 +10,16 @@
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec ts-node src/app.ts",
     "build:css": "npx @tailwindcss/cli -i ./public/styles/main.css -o ./public/styles/output.css --watch",
-
-    "build" : "tsc && npm run copy:views",
+    "build": "tsc && npm run copy:views",
     "copy:views": "cp -r src/views dist/views",
-    "start" : "node dist/app.js",
-    
+    "start": "node dist/app.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
-
     "seed": "npx ts-node config/seed.ts",
-
     "format": "prettier --write \"src/**/*.{ts,js,json,css}\"",
     "format:check": "prettier --check \"src/**/*.{ts,js,json,css}\"",
-
     "clean": "rm -rf dist",
     "rebuild": "npm run clean && npm run build"
   },
@@ -52,6 +47,7 @@
   "dependencies": {
     "@prisma/client": "^6.16.2",
     "@quixo3/prisma-session-store": "^3.1.13",
+    "@supabase/supabase-js": "^2.81.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "connect-flash": "^0.1.1",
